# wapuku

./: .codex_resume  .gitignore  AGENTS.md  Cargo.toml  LICENSE  rust-toolchain.toml
.github/workflows/: build.yml
blender/: wapuku.blend  wapuku.blend1
datafusion_test/: Cargo.toml
datafusion_test/src/: main.rs
docs/: index.html
polars_test/: Cargo.toml
polars_test/src/: main.rs
site/: index.html
src/: lib.rs  light.rs  model.rs  resources.rs  shader.wgsl  state.rs  texture.rs
test_test/: Cargo.toml
test_test/src/: main.rs
tests/: Cargo.toml
tests/src/: main.rs
wapuku-common-web/: Cargo.toml
wapuku-common-web/.cargo/: config.toml
wapuku-common-web/src/: lib.rs
wapuku-common-web/src/allocator/: tracing.rs
wapuku-common-web/src/workers/: interval_future.rs  mod.rs
wapuku-common-web/www/: service-worker.js  wasm-worker-base.js
wapuku-egui/: Cargo.toml  build.sh  package-lock.json
wapuku-egui/.cargo/: config.toml
wapuku-egui/src/: app.rs  edit_models.rs  lib.rs  model_views.rs
wapuku-egui/www/: index.html  index.js  package-lock.json  package.json  serve.json  serve.mjs  serve.sh  wasm-worker.js
wapuku-model/: Cargo.toml  rust-toolchain.toml
wapuku-model/data/: d2_transactions_pi_message.par
wapuku-model/src/: data_type.rs  lib.rs  main.rs  messages.rs  model.rs  parquet_scan.rs  polars_df.rs  test_data.rs  utils.rs  visualization.rs
wapuku-resources/: Cargo.toml
wapuku-resources/blender/: wapuku.blend  wapuku.blend1
wapuku-resources/gimp/: wapuku.xcf
wapuku-resources/src/: resources.rs
wapuku-ui/: Cargo.toml  build.sh  rust-toolchain.toml
wapuku-ui/.cargo/: config  config.toml
wapuku-ui/gimp/: wapuku.xcf
wapuku-ui/src/: camera.rs  lib.rs  light.rs  light.wgsl  mesh_model.rs  resources.rs  shader.wgsl  state.rs  texture.rs  visualization.rs
wapuku-ui/src/allocator/: mod.rs
wapuku-ui/src/workers/: mod.rs
wapuku-ui/www/: index.html  index.js  package-lock.json  package.json  serve.json  serve.sh  wasm-worker.js  webpack.config.js
wapuku-ui/www/data/: wapuku.mtl
wapuku-workers/: Cargo.toml
wapuku-workers/src/: lib.rs
www/: index.html  package-lock.json  package.json
www/data/: wapuku.mtl
