[workspace]

members = [
    "wapuku-model",
    "wapuku-resources",
    "wapuku-common-web",
    "wapuku-ui",
    "wapuku-egui",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yevgen Bushuyev"]
description = "A short description of my package"
documentation = "https://example.com/bar"


[patch.crates-io]
wasm-bindgen = {path = "../wasm-bindgen"}
wasm-bindgen-macro-support = { path = "../wasm-bindgen/crates/macro-support"}

