[workspace]

members = [
    "wapuku-model",
    "wapuku-resources",
    "wapuku-common-web",
    "wapuku-egui",
]

exclude = [
    "vendor/wasm-bindgen-cli",
    "vendor/wbg114",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yevgen Bushuyev"]
description = "A short description of my package"
documentation = "https://example.com/bar"

[patch.crates-io]
ethnum = { path = "vendor/ethnum" }
polars-ops = { path = "vendor/polars-ops" }
polars-plan = { path = "vendor/polars-plan" }
