[package]
name = "wapuku-common-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4.17"
rayon = {path= "../../rayon"}
js-sys = "0.3.63"
wasm-bindgen = {path = "../../wasm-bindgen/"}
wasm-bindgen-futures = "0.4.36"
web-sys = { version = "0.3.63", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "Worker",
    "MessageEvent"
]}


[dev-dependencies]
simplelog = "0.10.2"
ctor = "0.1.21"

#[workspace]