[package]
name = "wapuku-common-web"
version = "0.1.0"
edition = "2021"
#version.workspace = true
#authors.workspace = true
#description.workspace = true
#documentation.workspace = true
#edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
log = "0.4.17"
js-sys = "0.3.63"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "=0.4.45"
web-sys = { version = "=0.3.64", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "Worker",
    "MessageEvent",
    "WorkerGlobalScope"
]}


[dev-dependencies]
simplelog = "0.10.2"
ctor = "0.1.21"

#[workspace]
