[package]
name = "wapuku-egui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"

cfg-if = "1"
anyhow = "1.0"
reqwest = { version = "0.11" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"

wasm-bindgen = {path = "../../wasm-bindgen/"}

futures = "0.3.28"
wasm-bindgen-futures = "0.4.36"
web-sys = { version = "0.3.63", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "Worker"
]}
js-sys = "0.3.63"

wapuku-common-web = {path = "../wapuku-common-web" }
wapuku-model = {path = "../wapuku-model" }
wapuku-resources = {path = "../wapuku-resources" }

rayon = {path= "../../rayon"}

lazy_static = "1.4.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"



[package.metadata.wasm-pack.profile.release]
wasm-opt = false


[unstable]
async-fn-in-trait = true
