[package]
version = "0.1.0"
edition = "2021"
name = "wapuku-egui"
#version.workspace = true
#authors.workspace = true
#description.workspace = true
#documentation.workspace = true
#edition.workspace = true
#forced-runner = 'wasm-bindgen-test-runner'

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"

cfg-if = "1"
anyhow = "1.0"
reqwest = { version = "0.11" }

#egui = {git = "https://github.com/emilk/egui.git" }
egui = "0.22.0"
egui_extras = "0.22.0"

eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
serde = { version = "1", features = ["derive"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"

wasm-bindgen = {path = "../../wasm-bindgen/"}
#wasm-bindgen-cli = {path = "../../wasm-bindgen/crates/cli"}

futures = "0.3.28"
wasm-bindgen-futures = "0.4.36"
web-sys = { version = "0.3.63", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "Worker"
]}
js-sys = "0.3.63"

wapuku-common-web = {path = "../wapuku-common-web" }
wapuku-model = {path = "../wapuku-model" }
wapuku-resources = {path = "../wapuku-resources" }

rayon = {path= "../../rayon"}

lazy_static = "1.4.0"
rfd = "0.11.4"
uuid = { version = "1.4.1", features = ["v4"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.34"



[package.metadata.wasm-pack.profile.release]
wasm-opt = true


[unstable]
async-fn-in-trait = true

[env]
WASM_BINDGEN_THREADS_STACK_SIZE = 2097152
WASM_BINDGEN_THREADS = true

[patch.crates-io]
rayon-core = {path = "../../rayon/rayon-core"}
wasm-bindgen = {path = "../../wasm-bindgen"}
#wasm-bindgen-cli = {path = "../../wasm-bindgen/crates/cli"}
wasm-bindgen-macro-support = { path = "../../wasm-bindgen/crates/macro-support"}

[workspace]