[package]
name = "wapuku-model"
version = "0.1.0"
edition = "2021"
#version.workspace = true
#authors.workspace = true
#description.workspace = true
#documentation.workspace = true
#edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]


polars = {path = "../../polars/polars", default-features = false, features=["lazy", "parquet", "dynamic_groupby", "csv", "temporal", "rolling_window"]} # "fmt"

smartstring = "1.0.1"
bytes = "1.4"
log = "0.4.17"
cgmath = "0.18"

[dev-dependencies]
simplelog = "0.10.2"
ctor = "0.1.21"

[patch.crates-io]
wasm-bindgen = {path = "../../wasm-bindgen"}
wasm-bindgen-macro-support = { path = "../../wasm-bindgen/crates/macro-support"}

[workspace]