[package]
name = "wapuku-model"
version = "0.1.0"
edition = "2021"
#version.workspace = true
#authors.workspace = true
#description.workspace = true
#documentation.workspace = true
#edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]


polars = {path = "../../polars/crates/polars", default-features = false, features=[
    "nightly",
    "lazy",
    "parquet",
    "dynamic_group_by",
    "csv",
    "temporal",
    "rolling_window",
    "describe",
    "dtype-u8",
    "dtype-u16",
    "dtype-array",
    "dtype-i8",
    "dtype-i16",
    "dtype-date",
    "dtype-datetime",
    "dtype-duration",
    "dtype-time",
    "algo",
    "strings",
    "lazy_regex",
    "rank",
    "cov"
]} # "fmt" // "dtype-categorical" - for transpose

smartstring = "1.0.1"
bytes = "1.4"
log = "0.4.17"
cgmath = "0.18"
zip ={ version = "0.6.6", default-features = false, features = ["deflate", "time"]}

uuid = { version = "1.4.1", features = ["v4"]}
regex = "1.9.5"
once_cell = "1.18.0"

[dev-dependencies]
polars = {path = "../../polars/crates/polars", default-features = false, features=["lazy", "parquet", "dynamic_group_by", "csv", "temporal", "rolling_window", "describe", "fmt"]}
simplelog = "0.10.2"
ctor = "0.1.21"

[patch.crates-io]
wasm-bindgen = {path = "../../wasm-bindgen"}
wasm-bindgen-macro-support = { path = "../../wasm-bindgen/crates/macro-support"}

[workspace]
