[package]
name = "wapuku-model"
version = "0.1.0"
edition = "2021"
#version.workspace = true
#authors.workspace = true
#description.workspace = true
#documentation.workspace = true
#edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[features]
default = []
parquet = ["polars-io/parquet"]

[dependencies]
itertools = "0.12.0"
smartstring = "1.0.1"
bytes = "1.4"
log = "0.4.17"
cgmath = "0.18"
zip ={ version = "0.6.6", default-features = false, features = ["deflate", "time"]}

uuid = { version = "1.4.1", features = ["v4"]}
regex = "1.9.5"
once_cell = "1.18.0"
chrono = "0.4.41"
polars-io = { version = "0.53.0", default-features = false, features = ["csv"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
polars = { version = "0.53", default-features = false, features=[
    "lazy",
    "dynamic_group_by",
    "temporal",
    "rolling_window",
    "describe",
    "dtype-u8",
    "dtype-u16",
    "dtype-array",
    "dtype-i8",
    "dtype-i16",
    "dtype-date",
    "dtype-datetime",
    "dtype-duration",
    "dtype-categorical",
    "dtype-time",
    "timezones",
    "dtype-struct",
    "strings",
    "concat_str",
    "regex",
    "hist",
    "rank",
    "cov",
    "asof_join",
    "pivot",
    "moment"
]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
polars = { version = "0.53", default-features = false, features=[
    "lazy",
    "dynamic_group_by",
    "temporal",
    "rolling_window",
    "describe",
    "dtype-u8",
    "dtype-u16",
    "dtype-array",
    "dtype-i8",
    "dtype-i16",
    "dtype-date",
    "dtype-datetime",
    "dtype-duration",
    "dtype-categorical",
    "dtype-time",
    "timezones",
    "dtype-struct",
    "strings",
    "concat_str",
    "regex",
    "hist",
    "rank",
    "cov",
    "asof_join",
    "pivot",
    "moment"
]}

[dev-dependencies]
polars = { version = "0.53", default-features = false, features=["lazy", "dynamic_group_by", "temporal", "rolling_window", "describe", "fmt", "concat_str", "regex", "timezones"]}
simplelog = "0.10.2"
ctor = "0.1.21"
