[package]
name = "wapuku-resources"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
tobj = { version = "3.2"}

env_logger = "0.10.0"
log = "0.4.17"

cfg-if = "1"

[dev-dependencies]
simplelog = "0.10.2"
ctor = "0.1.21"

#[workspace]
